# theexpanseapi

./: .env  .gitignore  Cargo.toml  README.md
fixtures/: classes.json  people.json  season-1.json  season-2.json  season-3.json  spacecraft.json
src/: main.rs  messages.rs  models.rs  routes.rs  state.rs  util.rs
src/lib/: auth.rs  db.rs  mod.rs  models.rs  state.rs  util.rs
src/lib/episodes/: models.rs  routes.rs
src/lib/people/: models.rs  routes.rs
src/lib/spacecraft/: db.rs  mod.rs  models.rs  routes.rs  util.rs
src/people/: models.rs  routes.rs
src/routes/: .people.rs.swp  mod.rs  people.rs  spacecraft.rs
src/spacecraft/: mod.rs  models.rs  routes.rs
urls/: locations.json  people.json  season-4.json  ships.json
www/: README.md  babel.config.js  jest.config.ts  jest.setup.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
www/amplify/: team-provider-info.json
www/amplify/#current-cloud-backend/: backend-config.json
www/amplify/.config/: local-aws-info.json  local-env-info.json  project-config.json
www/amplify/backend/: amplify-meta.json
www/amplify/backend/awscloudformation/: nested-cloudformation-stack.yml
www/coverage/: clover.xml  coverage-final.json  lcov.info
www/coverage/lcov-report/: index.html  index.ts.html
www/coverage/lcov-report/classes/: atoms.ts.html  hooks.ts.html  index.html  index.ts.html
www/coverage/lcov-report/mocks/: handlers.ts.html  index.html  server.ts.html
www/coverage/lcov-report/pages/: index.html  index.tsx.html
www/coverage/lcov-report/people/: atoms.ts.html  hooks.ts.html  index.html  index.ts.html
www/mocks/: handlers.ts  index.ts  models.ts
www/mocks/handlers/: index.ts  spacecraft.ts
www/pages/: _app.tsx  _document.tsx  episodes.tsx  index.tsx  people.tsx  profile.tsx  protected.tsx  spacecraft.tsx
www/pages/api/: \  users.ts
www/pages/spacecraft/: index.tsx
www/public/: mockServiceWorker.js
www/src/classes/: atoms.ts  fetch.ts  hooks.ts  index.ts  types.ts
www/src/debug/: index.ts
www/src/episodes/: index.ts
www/src/fp/: index.ts
www/src/people/: atoms.ts  hooks.ts  index.ts  types.ts
www/src/profile/: atoms.ts  hooks.ts
www/src/shared/: atoms.ts  hooks.ts  index.ts
www/src/spacecraft/: api.ts  atoms.ts  hooks.ts  index.ts  types.ts
www/src/utils/: entities.ts  fetch.ts  index.ts
www/test/mocks/: index.ts
www/test/pages/: episodes.spec.tsx  index.spec.tsx
(+122 files in other folders)
