[package]
name = "theexpanse"
version = "0.1.0"
authors = ["Keith Bingman <kbingman@gmail.com>"]
edition = "2018"

[lib]
name = "lib"
path = "src/lib/main.rs"

[[bin]]
name = "import"
path = "src/bin/import.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.5.0", features = ["attributes"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
femme = "1.3.0"
log = "0.4.8"
mongodb = { version = "1.0.0", features = ["async-std-runtime"], default-features = false }
serde = { version = "1.0.105", features = ["derive"] }
serde_derive = "1.0.106"
tide = "0.8.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
clap = "3.0.0-beta.1"
serde_json = "1.0.56"
