[package]
name = "expanse"
version = "0.1.0"
authors = ["Keith Bingman <kbingman@gmail.com>"]
edition = "2018"

[lib]
name = "lib"
path = "src/lib/mod.rs"

[[bin]]
name = "importer"
path = "src/bin/importer/main.rs"

[[bin]]
name = "scraper"
path = "src/bin/scraper/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.5.0", features = ["attributes"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
femme = "1.3.0"
log = "0.4.8"
mongodb = { version = "1.1.1", features = ["async-std-runtime"], default-features = false }
serde = { version = "1.0.117", features = ["derive"] }
serde_derive = "1.0.117"
tide = "0.13.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
clap = "3.0.0-beta.1"
serde_json = "1.0.58"
anyhow = "1.0.33"
http-types = "2.5.0"
regex = "1.4.2"
surf = "2.1.0"
select = "0.5.0"
scraper = "0.12.0"
